# Bmsw

./: CMakeLists.txt  main.cpp
bm/: Cell.cpp  Cell.h  CellAstrocyte.cpp  CellAstrocyte.h  CellNeuron.cpp  CellNeuron.h  SmallWorld.cpp  SmallWorld.h
bm/brainEC/: ecAstrocyte.cpp  ecAstrocyte.h  ecConstant.h  ecNeuron.cpp  ecNeuron.h  ecNeuron.h~
bm/ses/: sesChordsSolver.cpp  sesChordsSolver.h  sesCombinedSolver.cpp  sesCombinedSolver.h  sesSolver.cpp  sesSolver.h  sesTangetSolver.cpp  sesTangetSolver.h
